# vkQuake2

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  3.19_Changes.txt  3.20_Changes.txt  3.21_Changes.txt  CMakeLists.txt  README.md  appveyor.yml  quake2.sln  quake2.vcxproj  quake2.vcxproj.filters  shaders.bat  shaders.sh
.github/workflows/: linux.yml  macos.yml  main.yml  windows.yml
client/: cdaudio.h  cl_cin.c  cl_ents.c  cl_fx.c  cl_input.c  cl_inv.c  cl_main.c  cl_parse.c  cl_scrn.c  cl_tent.c  cl_view.c  client.h  console.c  console.h  keys.c  keys.h  menu.c  miniaudio.h  qmenu.c  ref.h  snd_dma.c  snd_mem.c  snd_miniaudio.c  snd_miniaudio.h
client/miniaudio/: dr_mp3.h  stb_vorbis.c
ctf/: ctf.vcxproj  ctf.vcxproj.filters  g_combat.c  g_ctf.c  g_ctf.h  g_items.c  g_local.h  g_main.c  g_misc.c  g_save.c  g_spawn.c  g_target.c  g_utils.c  p_client.c  p_hud.c  p_menu.c  p_weapon.c  q_shared.c  q_shared.h
game/: g_combat.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_save.c  g_spawn.c  g_utils.c  game.vcxproj  game.vcxproj.filters  m_boss31.c  m_move.c  p_hud.c  p_weapon.c  q_shared.c  q_shared.h
linux/: Makefile  README  README-3.21-RELEASE  README.AXP  cd_linux.c  gl_glx.c  glw_linux.h  net_udp.c  q_shlinux.c  qgl_linux.c  quake2.axp.spec.sh  rw_linux.h  snd_alsa.c  snd_linux.c  snd_mixa.s  sys_linux.c  vid_menu.c  vid_so.c  vk_imp.c  vk_linux.h
linux/appimage/: AppRun  appimage.sh  vkquake.desktop
macos/: Makefile  cd_macos.c  q_shmacos.c  snd_macos.c  snd_macos.m  sys_macos.c  vid_dsym.c  vid_menu.c  vk_imp.c  vk_imp.m  vk_macos.h  win_macos.h  win_macos.m
macos/quake2.xcodeproj/: project.pbxproj
macos/vkQuake2.xcworkspace/: contents.xcworkspacedata
null/: cd_null.c
qcommon/: cmd.c  common.c  cvar.c  files.c  md4.c  net_chan.c  qcommon.h
ref_gl/: gl_draw.c  gl_image.c  gl_local.h  gl_model.c  gl_rmain.c  gl_rsurf.c  qgl.h  ref_gl.vcxproj  ref_gl.vcxproj.filters
ref_soft/: r_aclip.c  r_alias.c  r_dither.h  r_draw.c  r_drawa.asm  r_edge.c  r_image.c  r_light.c  r_local.h  r_main.c  r_misc.c  r_model.c  r_part.c  r_poly.c  r_polysa.asm  r_polyse.c  r_rast.c  r_scan.c  r_surf.c  ref_soft.vcxproj  ref_soft.vcxproj.filters
ref_vk/: qvk.h  ref_vk.vcxproj  ref_vk.vcxproj.filters  vk_buffer.c  vk_cmd.c  vk_common.c  vk_device.c  vk_draw.c  vk_image.c  vk_light.c  vk_local.h  vk_mem_alloc.cpp  vk_mem_alloc.h  vk_mesh.c  vk_model.c  vk_model.h  vk_pipeline.c  vk_renderpass.c  vk_rmain.c  vk_rmisc.c  vk_rsurf.c  vk_shaders.c  vk_shaders.h  vk_swapchain.c  vk_validation.c  vk_warp.c
ref_vk/spirv/: basic_color_quad_frag.c  basic_color_quad_vert.c  basic_frag.c  basic_vert.c  (+30 more)
rogue/: dm_ball.c  dm_tag.c  g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_newai.c  g_newdm.c  g_newfnc.c  g_newtarg.c  g_newtrig.c  g_newweap.c  g_phys.c  g_save.c  g_spawn.c  g_sphere.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  game.dsp  game.h  game.plg  m_berserk.c  m_berserk.h  m_boss2.c  m_boss31.c  m_boss32.c  m_brain.c  m_carrier.c  m_carrier.h  m_chick.c  m_flipper.c  (+35 more)
server/: sv_ccmds.c  sv_ents.c  sv_game.c  sv_init.c  sv_main.c  sv_send.c  sv_world.c
shaders/: basic.frag  basic.vert  basic_color_quad.vert  beam.vert  d_light.vert  model.frag  model.vert  nullmodel.frag  nullmodel.vert  particle.frag  particle.vert  point_particle.frag  point_particle.vert  polygon.frag  polygon.vert  polygon_lmap.frag  polygon_lmap.vert  polygon_warp.vert  postprocess.frag  postprocess.vert  shadows.frag  shadows.vert  skybox.frag  skybox.vert  sprite.frag  sprite.vert  world_warp.frag  world_warp.vert
smd/: code_changelog.txt  fmod.h  g_ai.c  g_camera.c  g_cmds.c  g_combat.c  g_crane.c  g_fog.c  g_func.c  g_func_decs.h  g_func_list.h  g_items.c  g_jetpack.c  g_lights.c  g_local.h  g_lock.c  g_main.c  g_misc.c  g_mmove_decs.h  g_mmove_list.h  g_model.c  g_monster.c  g_mtrain.c  g_newai.c  g_patchplayermodels.c  g_pendulum.c  g_phys.c  g_reflect.c  g_save.c  g_sound.c  g_spawn.c  g_target.c  g_thing.c  g_tracktrain.c  g_trigger.c  g_turret.c  g_utils.c  g_vehicle.c  g_weapon.c  game.h  (+45 more)
win32/: cd_win.c  glw_imp.c  glw_win.h  in_win.c  net_wins.c  q_shwin.c  qgl_win.c  qvk_win.c  rw_dib.c  rw_imp.c  snd_win.c  sys_win.c  vid_dll.c  vid_menu.c  vk_imp.c  vk_win.h
xatrix/: g_ai.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  m_actor.c  m_berserk.c  m_boss2.c  m_boss3.c  m_boss31.c  m_boss32.c  m_boss5.c  m_brain.c  m_chick.c  m_fixbot.c  m_fixbot.h  m_flash.c  m_float.c  m_flyer.c  m_gekk.c  m_gekk.h  m_gladb.c  m_gladiator.c  m_gunner.c  m_hover.c  m_infantry.c  m_medic.c  (+16 more)
zaero/: g_ai.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  game.h  m_berserk.c  m_boss2.c  m_boss31.c  m_boss32.c  m_brain.c  m_chick.c  m_flash.c  m_flipper.c  m_float.c  m_flyer.c  m_gladiator.c  m_gunner.c  m_hover.c  m_infantry.c  m_insane.c  m_medic.c  m_move.c  m_mutant.c  m_parasite.c  m_soldier.c  m_supertank.c  (+28 more)
(+8 files in other folders)
